[package]
edition = "2021"
name = "stm_board_rust"
version = "0.1.0"

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = { version = "0.3.8", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.1.0", features = ["memory-x", "stm32g474re", "time-driver-any", "exti", "unstable-pac"] }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.2", features = ["tick-hz-1_000_000"] }
embedded-can = "0.4.1"
embedded-io-async = "0.6.1"
lin-bus = "0.4.0"
panic-halt = "0.2.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }
static_cell = "2.1.0"

[[bin]]
name = "stm_board_rust"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
arb = []

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }

[build-dependencies]
dbc-codegen = {git = "https://github.com/technocreatives/dbc-codegen", rev="af7cbf39bee2fd41229ba53f8db5b90b4782f61d"}
